<resources>
    <string name="app_name">My Notes</string>
    <string name="write">write</string>
    <string name="notes">Notes</string>
    <string name="checklist">Checklist</string>
    <string name="sort">Sort</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starred">Starred</string>
    <string name="restore_from_trash">Restore From Trash</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="open_nav">Open Navigation Bar</string>
    <string name="close_nav">Closed Navigation Bar</string>
    <string name="categories">Categories</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="details">Details</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="color_pallet">Color Pallet</string>
    <string name="done">Done</string>
    <string name="save_note">Save Note</string>
    <string name="set_importance">Set Importance</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_content">Enter content</string>
    <string name="change_category">Change Category</string>
    <string name="dismiss">Dismiss</string>
    <string name="modified_date">Modified date</string>
    <string name="created_date">Created date</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_category">Add Category</string>
    <string name="new_category">New category</string>
    <string name="enter_category">Enter category</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>