<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/details"
        android:title="@string/details"
        app:showAsAction="never"/>

    <item android:id="@+id/send"
        android:title="@string/send"
        app:showAsAction="never"/>

    <item android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="never"/>

    <item android:id="@+id/star"
        android:title="@string/starred"
        android:icon="@drawable/star_outline"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/colorPallet"
        android:title="@string/set_importance"
        android:icon="@drawable/color_pallet"
        app:showAsAction="ifRoom"/>

</menu>