<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="MyNotes"
                app:titleTextColor="@color/white"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/textColor1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checklist"/>

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bigMargin"
            android:background="@color/colorAccent"
            android:src="@drawable/mic"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@id/options"
            app:layout_constraintStart_toStartOf="@id/options"
            app:layout_constraintBottom_toTopOf="@+id/checklist"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bigMargin"
            android:background="@color/colorAccent"
            android:src="@drawable/list_black"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@+id/options"
            app:layout_constraintBottom_toTopOf="@id/options"
            app:layout_constraintStart_toStartOf="@+id/options"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/textNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginBottom="@dimen/bigMargin"
            app:fabSize="mini"
            android:src="@drawable/text"
            android:contentDescription="@string/write"
            app:layout_constraintEnd_toEndOf="@+id/options"
            app:layout_constraintBottom_toBottomOf="@id/options"
            app:layout_constraintStart_toStartOf="@+id/options"
            app:layout_constraintTop_toTopOf="@+id/options"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bigMargin"
            android:layout_marginEnd="@dimen/bigMargin"
            android:background="@color/colorAccent"
            android:src="@drawable/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>